Fix background overflow

--- a/style.css
+++ b/style.css
@@ -22,16 +22,17 @@ h1 {
 
 #main_screen {
     width: 100%; 
+    height: 100vh;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
 }
-
 
 .slides{
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 50px;
     scroll-snap-align: start;
@@ -46,11 +47,10 @@ h1 {
 }
 
 
-
-
-#work{
+#work, #about{
     /* background: linear-gradient(455deg, #404c80, #53ff88); */
     background: linear-gradient(180deg, #a18167, #f5e9df);
+    height: auto;
 }
 
 #about{
@@ -82,7 +82,7 @@ a {
 }
 
 .card{
-    width: 18rem;
+    width: 80%;
 }
 
 #cards {
@@ -161,25 +161,8 @@ a {
         display: none;
     }
 
-    #main_screen {
-        width: 100%; 
-        height: 100vh;
-        overflow-y: auto;
-        scroll-snap-type: y mandatory;
-    }
-
-
     .slides{
-        width: 100%;
-        /* height: 100vh; */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 50px;
-        scroll-snap-align: start;
-        /* height: 100%; */
-
+        height: 100vh;
     }
 
 
